Overview of changes in version 0.8.40:

  - Exporting to HTML sorts each type also by name/year
  - Using boost::shared_ptr/scoped_ptr instead of YGP::Handle/SmartPtr
  - Fixes

Overview of changes in version 0.8.38:

  - Prettyfied output (if automake supports it)
  - Added forgotten files src/Icon*.h to the distribution


Overview of changes in version 0.8.37:

  - Fixed an off-by-1 error which failed to use the last of the articles
  - Fixed (harmless) compiler warnings


Overview of changes in version 0.8.36:

  - Changed type of born/died fields to SMALLINT
  - Installing menu entry for desktop environments
  - Improved the author's logo (thanks to Fabian Hernandez; cocoknight.com)


Overview of changes in version 0.8.35:

  - Fixed an off-by-1 error which failed to use the last of the special names
  - DB-table Words treats special words as binary
  - Actualised contact information


Overview of changes in version 0.8.34:

  - Fixed genre-names
  - Added a polish and a serbian flag


Overview of changes in version 0.8.33:

  - Can be compiled under x86_64


Overview of changes in version 0.8.32:

  - Genres are stored as lists (not maps)
  - Using automake 1.9.6, autoconf 2.61


Overview of changes in version 0.8.31:

  - Adapted to new exception-handling style of libYGP 0.8.00


Overview of changes in version 0.8.30:

  - Actor-page can show actors for movies or actor starring in movies
  - Actor-page allows selection of movies, but not editing them
  - Optimised marking items as changed
  - Fixed creating translated names of movies


Overview of changes in version 0.8.22:

  - Values which celebrities don't have (genre, ...) can't be changed anymore
  - Fixed saving translated names of movies
  - Fixed changing the language in which movies are displayed


Overview of changes in version 0.8.21:

  - Fixed crash commiting settings (closing with OK) without being logged in
  - Can be compiled with GCC 4.1


Overview of changes in version 0.8.20:
