@@ -3,9 +3,14 @@
 EXTRA_DIST=createDB.sql populateDB.sql
 
 createDB:
-	echo Creating database ...
+	@echo Creating database ...
 	mysql -u root -p -f < createDB.sql
 
 populateDB:
-	echo Populating database ...
+	@echo Populating database ...
 	mysql -u cdmgr -p < populateDB.sql
+
+
+updateDB_Subtitles:
+	@echo Changing length of subtitle-column in Movie-table
+	echo "ALTER TABLE Movies MODIFY subtitles VARCHAR(29) NOT NULL;"|mysql -u root -p
